第二种布局支持,可能有bug.

--- a/mobile/src/main/res/layout/activity_lanncher.xml
+++ b/mobile/src/main/res/layout/activity_lanncher.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/fl_bg"
+    android:id="@+id/ll_base"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
 
     <com.zhy.android.percent.support.PercentLinearLayout
-        android:id="@+id/ll_main"
+        android:id="@+id/ll_center"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="8"
@@ -27,6 +27,7 @@
             android:layout_height="match_parent" />
 
         <com.zhy.android.percent.support.PercentLinearLayout
+            android:id="@+id/ll_items"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="60"
