--- a/mobile/src/main/res/layout/activity_lanncher.xml
+++ b/mobile/src/main/res/layout/activity_lanncher.xml
@@ -48,7 +48,7 @@
                 android:layout_height="15dp"
                 android:gravity="center"
                 android:orientation="horizontal"
-                android:paddingBottom="3dp"
+                android:padding="3dp"
                 app:layout_marginBottomPercent="2%h" />
         </com.zhy.android.percent.support.PercentLinearLayout>
 
