--- a/mobile/src/main/res/layout/content_set_system.xml
+++ b/mobile/src/main/res/layout/content_set_system.xml
@@ -26,6 +26,17 @@
     <View style="@style/Interval" />
 
     <com.wow.carlauncher.common.view.SetView
+        android:id="@+id/sv_open_log"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        st:summary="@string/set_yes"
+        st:summary2="@string/set_no"
+        st:titleEx="开启日志记录"
+        st:type="switchB" />
+
+    <View style="@style/Interval" />
+
+    <com.wow.carlauncher.common.view.SetView
         android:id="@+id/sv_launcher_show_dock_label"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
